force-app/main/default/objects/Food_Item__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>IF( ISBLANK(Provided_Expiration_Date__c), Purchase_Date__c + Food__r.Shelf_Life_Days__c, Provided_Expiration_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date this item will expire. Calculated from the provided expiration date or the shelf life on the food record.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>