force-app/main/default/objects/Food_Item__c/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <label>Food</label>
    <referenceTo>Food__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Food_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>