force-app/main/default/objects/Food_Item__c/fields/IsConsumed__c.field-meta.xml
<CustomField>
    <fullName>IsConsumed__c</fullName>
    <formula>Quantity_Remaining__c &lt;=0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked, if all of this item has been consumed.</inlineHelpText>
    <label>IsConsumed</label>
    <type>Checkbox</type>
</CustomField>