force-app/main/default/objects/Food_Item__c/fields/Provided_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Provided_Expiration_Date__c</fullName>
    <inlineHelpText>If this food item has a provided enter it here, otherwise leave blank for the shelf life to be calculated</inlineHelpText>
    <label>Provided Expiration Date</label>
    <type>Date</type>
</CustomField>